--- a/_config.yml
+++ b/_config.yml
@@ -24,8 +24,8 @@ description: >- # this means to ignore newlines until "baseurl:"
   참고하여 많은 도움이 되면 좋겠습니다.
 baseurl: "/tech-doc" # the subpath of your site, e.g. /blog
 url: "https://jypark-blog.github.io" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: 
-github_username: 
+twitter_username: ""
+github_username: ""
 
 # Build settings
 theme: minima
